fix alignment of the dismiss icon

--- a/scss/_alerts.scss
+++ b/scss/_alerts.scss
@@ -17,11 +17,12 @@
 // Close button
 .flash-close {
   float: right;
-  width: 44px;
+  width: 34px;
   height: 44px;
   margin: -11px;
   color: inherit;
   line-height: 40px;
+  text-align: center;
   cursor: pointer;
   opacity: 0.6;
   // Undo `<button>` styles
